Fix topic multiple dropdown label alignment

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -2738,8 +2738,8 @@
 }
 
 .ui.label.topic svg.delete.icon {
-  margin-left: .25rem;
-  margin-right: -.25rem;
+  margin: -3px -.25rem -3px .25rem;
+  vertical-align: baseline;
 }
 
 .ui.label.topic {
